--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevinzhu",
-  "version": "1.0.2",
+  "version": "1.1.1",
   "description": "Kevin Zhu's Interactive Resume",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,8 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "clear": "^0.1.0",
-    "inquirer": "^7.0.0"
+    "inquirer": "^7.0.0",
+    "request": "^2.88.0"
   },
   "bin": {
     "kevinzhu": "./index.js"
